# qwc-ogc-service

./: Dockerfile  README.md  ogc_service.py  pyproject.toml  requirements.txt  server.py  test.py  wfs_response_filters.py  wms_response_filters.py
.github/workflows/: main.yml
schemas/: qwc-ogc-service.json
src/: gettranslations_handler.py  ogc_service.py  ogcapi_service.py  server.py  wfs_filters.py  wfs_handler.py  wfs_response_filters.py  wms_handler.py  wms_response_filters.py
src/templates/ogcapi/: describeCollection.html  getIndex.html  header.html
tests/: api_tests.py  ogc_tests.py  ogcapi_tests.py
tests/testdata/: wfs_test.gpkg  wfs_test.qgs  wms_test.gpkg  wms_test.qgs
