[project]
name = "qwc-ogc-service"
version = "v2025.12.17"
description = "QWC OGC Service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask~=3.0.0",
    "Werkzeug~=3.1.4",
    "Flask-JWT-Extended~=4.6.0",
    "flask-restx~=1.3.0",
    "requests~=2.32.0",
    "qwc-services-core~=1.4.0"
]

[dependency-groups]
dev = [
    "python-dotenv>=1.0.1",
]
